--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -195,18 +195,65 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202003081531292_initial.cs" />
+    <Compile Include="Migrations\202003081531292_initial.Designer.cs">
+      <DependentUpon>202003081531292_initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003081543257_populateMembershiptype.cs" />
+    <Compile Include="Migrations\202003081543257_populateMembershiptype.Designer.cs">
+      <DependentUpon>202003081543257_populateMembershiptype.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003081554126_populateMembershiptype1.cs" />
+    <Compile Include="Migrations\202003081554126_populateMembershiptype1.Designer.cs">
+      <DependentUpon>202003081554126_populateMembershiptype1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003081609380_birthaddedtocustomer.cs" />
+    <Compile Include="Migrations\202003081609380_birthaddedtocustomer.Designer.cs">
+      <DependentUpon>202003081609380_birthaddedtocustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003081612353_NameRequiredInMember.cs" />
+    <Compile Include="Migrations\202003081612353_NameRequiredInMember.Designer.cs">
+      <DependentUpon>202003081612353_NameRequiredInMember.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003081620277_birthadteupdate.cs" />
+    <Compile Include="Migrations\202003081620277_birthadteupdate.Designer.cs">
+      <DependentUpon>202003081620277_birthadteupdate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003081650105_movieandgenre.cs" />
+    <Compile Include="Migrations\202003081650105_movieandgenre.Designer.cs">
+      <DependentUpon>202003081650105_movieandgenre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003081650483_populategenre.cs" />
+    <Compile Include="Migrations\202003081650483_populategenre.Designer.cs">
+      <DependentUpon>202003081650483_populategenre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003081850191_numberinstockandvalidations.cs" />
+    <Compile Include="Migrations\202003081850191_numberinstockandvalidations.Designer.cs">
+      <DependentUpon>202003081850191_numberinstockandvalidations.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
+    <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\CustomerFormViewModel.cs" />
+    <Compile Include="ViewModels\MovieFormViewModel.cs" />
+    <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-lumen.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -265,6 +312,14 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Movies\Random.cshtml" />
+    <Content Include="Views\Customers\Index.cshtml" />
+    <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
+    <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -281,6 +336,35 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202003081531292_initial.resx">
+      <DependentUpon>202003081531292_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003081543257_populateMembershiptype.resx">
+      <DependentUpon>202003081543257_populateMembershiptype.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003081554126_populateMembershiptype1.resx">
+      <DependentUpon>202003081554126_populateMembershiptype1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003081609380_birthaddedtocustomer.resx">
+      <DependentUpon>202003081609380_birthaddedtocustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003081612353_NameRequiredInMember.resx">
+      <DependentUpon>202003081612353_NameRequiredInMember.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003081620277_birthadteupdate.resx">
+      <DependentUpon>202003081620277_birthadteupdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003081650105_movieandgenre.resx">
+      <DependentUpon>202003081650105_movieandgenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003081650483_populategenre.resx">
+      <DependentUpon>202003081650483_populategenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003081850191_numberinstockandvalidations.resx">
+      <DependentUpon>202003081850191_numberinstockandvalidations.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
