--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -238,6 +238,10 @@
     <Compile Include="Migrations\202003081850191_numberinstockandvalidations.Designer.cs">
       <DependentUpon>202003081850191_numberinstockandvalidations.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202003091204469_MoreFieldsRequiredMovies.cs" />
+    <Compile Include="Migrations\202003091204469_MoreFieldsRequiredMovies.Designer.cs">
+      <DependentUpon>202003091204469_MoreFieldsRequiredMovies.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -245,6 +249,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
+    <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -364,6 +369,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202003081850191_numberinstockandvalidations.resx">
       <DependentUpon>202003081850191_numberinstockandvalidations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003091204469_MoreFieldsRequiredMovies.resx">
+      <DependentUpon>202003091204469_MoreFieldsRequiredMovies.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
