--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -270,6 +270,14 @@
     <Compile Include="Migrations\202003111314007_DrivingLicenseAddedToAppUsers.Designer.cs">
       <DependentUpon>202003111314007_DrivingLicenseAddedToAppUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202003111542040_PhoneAddedToAppUsers.cs" />
+    <Compile Include="Migrations\202003111542040_PhoneAddedToAppUsers.Designer.cs">
+      <DependentUpon>202003111542040_PhoneAddedToAppUsers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003111553540_PhoneAddedToAppUsersConst.cs" />
+    <Compile Include="Migrations\202003111553540_PhoneAddedToAppUsersConst.Designer.cs">
+      <DependentUpon>202003111553540_PhoneAddedToAppUsersConst.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -585,6 +593,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202003111314007_DrivingLicenseAddedToAppUsers.resx">
       <DependentUpon>202003111314007_DrivingLicenseAddedToAppUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003111542040_PhoneAddedToAppUsers.resx">
+      <DependentUpon>202003111542040_PhoneAddedToAppUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003111553540_PhoneAddedToAppUsersConst.resx">
+      <DependentUpon>202003111553540_PhoneAddedToAppUsersConst.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
